# terminput

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE-MIT  Makefile.toml  README.md  cliff.toml  deny.toml  release-plz.toml
.github/: ci.yml  dependabot.yml
.github/workflows/: ci.yml
crates/terminput/: CHANGELOG.md  Cargo.toml
crates/terminput-crossterm/: CHANGELOG.md  Cargo.toml  README.md
crates/terminput-crossterm/src/: lib.rs  mapping.rs
crates/terminput-egui/: CHANGELOG.md  Cargo.toml  README.md
crates/terminput-egui/src/: lib.rs  mapping.rs
crates/terminput-termina/: CHANGELOG.md  Cargo.toml  README.md
crates/terminput-termina/src/: lib.rs  mapping.rs
crates/terminput-termion/: CHANGELOG.md  Cargo.toml  README.md
crates/terminput-termion/src/: lib.rs  mapping.rs  termion.rs
crates/terminput-termwiz/: CHANGELOG.md  Cargo.toml  README.md
crates/terminput-termwiz/src/: lib.rs  mapping.rs
crates/terminput-web-sys/: CHANGELOG.md  Cargo.toml  README.md
crates/terminput-web-sys/src/: lib.rs  mapping.rs
crates/terminput/src/: encoder.rs  key.rs  lib.rs  mouse.rs
crates/terminput/src/parser/: mod.rs
crates/terminput/tests/: match_test.rs  parse_test.rs
examples/: Cargo.toml  crossterm.rs  match_event.rs  termion.rs  termwiz.rs
examples/examples/: crossterm.rs  match_event.rs  termina.rs  termion.rs  termwiz.rs
examples/web/: Cargo.toml  README.md  index.html
examples/web/src/: main.rs
src/: crossterm.rs  egui.rs  encoder.rs  key.rs  lib.rs  mouse.rs  parser.rs  termion.rs  termwiz.rs
src/parser/: mod.rs  parser_test.rs
tests/: parse_test.rs
