[workspace]
members = ["./crates/*", "examples"]
resolver = "2"

[workspace.package]
edition = "2021"
rust-version = "1.81"
authors = ["Austin Schey <aschey13@gmail.com>"]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/aschey/terminput"
homepage = "https://github.com/aschey/terminput"
include = ["/src", "/examples", "/tests"]
categories = ["command-line-interface", "encoding"]
keywords = ["tui", "terminal", "input", "ratatui"]

[workspace.lints.rustdoc]
broken_intra_doc_links = "deny"

[workspace.lints.clippy]
unwrap_used = "deny"
doc_markdown = "warn"
default_trait_access = "warn"
ignored_unit_patterns = "warn"
semicolon_if_nothing_returned = "warn"
missing_fields_in_debug = "warn"
use_self = "warn"
