[package]
name = "terminput-crossterm"
version = "0.3.2"
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "crossterm adapter for terminput"
include.workspace = true
categories.workspace = true
keywords.workspace = true
readme = "./README.md"

[dependencies]
crossterm = { version = "0.29", default-features = false, features = [
  "events",
  "bracketed-paste",
  "windows",
] }
terminput = { path = "../terminput", version = "0.5.2" }

[lints]
workspace = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
cargo-args = ["-Zunstable-options", "-Zrustdoc-scrape-examples"]
