[package]
name = "terminput-crossterm"
version = "0.3.3"
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "crossterm adapter for terminput"
include.workspace = true
categories.workspace = true
keywords.workspace = true
readme = "./README.md"

[dependencies.crossterm_0_28]
version = "0.28"
package = "crossterm"
optional = true
default-features = false
features = ["events", "bracketed-paste", "windows"]

[dependencies.crossterm_0_29]
version = "0.29"
package = "crossterm"
optional = true
default-features = false
features = ["events", "bracketed-paste", "windows"]

[dependencies]
terminput = { path = "../terminput", version = "0.5.3" }

[features]
crossterm_0_28 = ["dep:crossterm_0_28"]
crossterm_0_29 = ["dep:crossterm_0_29"]
default = ["crossterm_0_29"]

[lints]
workspace = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
cargo-args = ["-Zunstable-options", "-Zrustdoc-scrape-examples"]
