[package]
name = "terminput-egui"
version = "0.3.2"
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "egui adapter for terminput"
include.workspace = true
categories.workspace = true
keywords.workspace = true
readme = "./README.md"

[dependencies]
egui_0_32 = { package = "egui", version = "0.32", default-features = false, optional = true }
terminput = { path = "../terminput", version = "0.5.3" }

[features]
egui_0_32 = ["dep:egui_0_32"]
default = ["egui_0_32"]

[lints]
workspace = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
cargo-args = ["-Zunstable-options", "-Zrustdoc-scrape-examples"]
