[package]
name = "terminput-termina"
version = "0.1.3"
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "termina adapter for terminput"
include.workspace = true
categories.workspace = true
keywords.workspace = true
readme = "./README.md"

[dependencies]
termina_0_1 = { package = "termina", version = "0.1", optional = true }
terminput = { path = "../terminput", version = "0.5.10" }

[features]
termina_0_1 = ["dep:termina_0_1"]
default = ["termina_0_1"]

[lints]
workspace = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
cargo-args = ["-Zunstable-options", "-Zrustdoc-scrape-examples"]
