[package]
name = "terminput-termina"
version = "0.2.0"
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "termina adapter for terminput"
include.workspace = true
categories.workspace = true
keywords.workspace = true
readme = "./README.md"

[dependencies]
termina_0_2 = { package = "termina", version = "0.2", optional = true }
terminput = { path = "../terminput", version = "0.5.13" }

[features]
termina_0_2 = ["dep:termina_0_2"]
default = ["termina_0_2"]

[lints]
workspace = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
cargo-args = ["-Zunstable-options", "-Zrustdoc-scrape-examples"]
