[package]
name = "terminput-termion"
version = "0.1.2"
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "termion adapter for terminput"
include.workspace = true
categories.workspace = true
keywords.workspace = true
readme = "./README.md"

[target.'cfg(not(windows))'.dependencies]
termion = { version = "4" }
terminput = { path = "../terminput", version = "0.4.1" }

[lints]
workspace = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
cargo-args = ["-Zunstable-options", "-Zrustdoc-scrape-examples"]
