[package]
name = "terminput-termion"
version = "0.3.5"
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "termion adapter for terminput"
include.workspace = true
categories.workspace = true
keywords.workspace = true
readme = "./README.md"

[target.'cfg(not(windows))'.dependencies]
termion_4 = { package = "termion", version = "4", optional = true }
terminput = { path = "../terminput", version = "0.5.9" }

[features]
termion_4 = ["dep:termion_4"]
default = ["termion_4"]

[lints]
workspace = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
cargo-args = ["-Zunstable-options", "-Zrustdoc-scrape-examples"]
