[package]
name = "terminput-termwiz"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
homepage.workspace = true
description = "termwiz adapter for terminput"
include.workspace = true
categories.workspace = true
keywords.workspace = true

[dependencies]
termwiz = { version = "0.22" }
terminput = { path = "../terminput", version = "0.4.0" }

[lints]
workspace = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
cargo-args = ["-Zunstable-options", "-Zrustdoc-scrape-examples"]
