[package]
name = "terminput-termwiz"
version = "0.3.1"
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "termwiz adapter for terminput"
include.workspace = true
categories.workspace = true
keywords.workspace = true
readme = "./README.md"

[dependencies]
termwiz = { version = "0.23" }
terminput = { path = "../terminput", version = "0.5.1" }

[lints]
workspace = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
cargo-args = ["-Zunstable-options", "-Zrustdoc-scrape-examples"]
