[package]
name = "terminput-termwiz"
version = "0.4.6"
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "termwiz adapter for terminput"
include.workspace = true
categories.workspace = true
keywords.workspace = true
readme = "./README.md"

[dependencies]
termwiz_0_23 = { package = "termwiz", version = "0.23", optional = true }
termwiz_0_22 = { package = "termwiz", version = "0.22", optional = true }
terminput = { path = "../terminput", version = "0.5.10" }

[features]
termwiz_0_23 = ["dep:termwiz_0_23"]
termwiz_0_22 = ["dep:termwiz_0_22"]
default = ["termwiz_0_23"]

[lints]
workspace = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
cargo-args = ["-Zunstable-options", "-Zrustdoc-scrape-examples"]
