[package]
name = "terminput-web-sys"
version = "0.1.0"
description = "web-sys adapter for terminput"
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
include.workspace = true
categories.workspace = true
keywords.workspace = true
readme = "./README.md"

[dependencies]
web-sys = { version = "0.3.77", features = [
  "KeyboardEvent",
  "MouseEvent",
  "DragEvent",
  "ClipboardEvent",
  "WheelEvent",
  "DataTransfer",
  "Document",
  "Window",
  "Element",
] }
terminput = { path = "../terminput", version = "0.5.2" }

[lints]
workspace = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
cargo-args = ["-Zunstable-options", "-Zrustdoc-scrape-examples"]
