[package]
name = "terminput-web-sys"
version = "0.2.4"
description = "web-sys adapter for terminput"
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
include.workspace = true
categories.workspace = true
keywords.workspace = true
readme = "./README.md"

[dependencies.web_sys_0_3]
version = "0.3.77"
package = "web-sys"
optional = true
features = [
  "KeyboardEvent",
  "MouseEvent",
  "DragEvent",
  "ClipboardEvent",
  "WheelEvent",
  "DataTransfer",
  "Document",
  "Window",
  "Element",
]

[dependencies]
terminput = { path = "../terminput", version = "0.5.8" }

[features]
web_sys_0_3 = ["dep:web_sys_0_3"]
default = ["web_sys_0_3"]

[lints]
workspace = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
cargo-args = ["-Zunstable-options", "-Zrustdoc-scrape-examples"]
