[package]
name = "terminput"
version = "0.5.4"
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "TUI input parser/encoder and abstraction over input backends"
include.workspace = true
categories.workspace = true
keywords.workspace = true
readme = "./README.md"

[dependencies]
bitflags = "2.9"
serde = { version = "1.0.134", optional = true, features = ["derive"] }

[dev-dependencies]
crossterm = "0.29"
terminput-crossterm = { path = "../terminput-crossterm" }

[features]
default = ["std"]
serde = ["dep:serde", "bitflags/serde"]
std = []

[lints]
workspace = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
cargo-args = ["-Zunstable-options", "-Zrustdoc-scrape-examples"]
